--- a/frontend/src/styles/Main.css
+++ b/frontend/src/styles/Main.css
@@ -1,137 +1,178 @@
-.nav {
-  position: fixed;
-  background-color: white;
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 100px;
-  z-index: 9999;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}
+/* Navigation Bar */
 
-.usLogo {
-  display: flex;
-  align-items: center;
-}
-
-.usLogo img {
-  height: 70px;
-  padding: 0px 0px 0px 20px;
-}
-
-.nav > .desktop > li {
-  display: inline-block;
-  flex-direction: column;
-  justify-content: center;
-  padding: 0px 16px;
-  position: relative;
-}
-
-.nav > .desktop > li > a {
-  position: relative;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
   text-decoration: none;
-  color: #00839C;
-  font-size: 18px;
+  list-style: none;
 }
 
-.nav > .desktop > li > a::after {
+body {
+  min-height: 100vh;
+  background: white;
+  font-family: "PoppinsSB.ttf";
+}
+
+header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  right: 0;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* background: #DFF2F9; */
+  background: white;
+  height: 80px; 
+  padding: 0px 12%;
+  transition: all 0.50s ease;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo img {
+  height: 50px;
+}
+
+.navbar {
+  display: flex;
+}
+
+.navbar a {
+  position: relative;
+  color: #006D82;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 5px 0;
+  margin: 0px 30px;
+  transition: color 0.50s ease;
+}
+
+.navbar a::after {
   content: '';
   position: absolute;
   width: 100%;
   height: 2px;
-  bottom: -5px;
+  bottom: 0;
   left: 0;
-  background-color: #00839C;
+  background-color: transparent;
   transform: scaleX(0);
   transform-origin: bottom center;
-  transition: transform 0.4s ease-in-out;
+  transition: transform 0.4s ease-in-out, background-color 0.4s ease-in-out;
 }
 
-.nav > .desktop > li > a:hover {
-  color: #1C7947;
-}
-
-.nav > .desktop > li > a:hover::after {
-  background-color: #1C7947;
+.navbar a:hover::after {
+  background-color: #009C4E;
   transform: scaleX(1);
-  transform-origin: bottom center;
 }
 
-.donateBtn {
-  position: absolute;
-  right: 32px;
-  background-color: #00839C;
-  padding: 5px 15px;
-  border-radius: 8px;
-  transition: background-color 0.4s ease-in-out;
+.navbar a:hover {
+  color: #009C4E;
 }
 
-.donateBtn:hover {
-  background-color: #1C7947;
+.navbar a.active {
+  color: #009C4E;
 }
 
-.btnA {
-  text-decoration: none;
-  color: white;
-  text-align: center;
-  font-size: 16px;
+.main {
+  display: flex;
+  align-items: center;
+}
+
+.user {
+  display: flex;
+  align-items: center;
+}
+
+.main a {
+  margin-right: 5px;
+  margin-left: 0px;
+  color: #006D82;
+  font-size: 14px;
+  font-weight: 500;
+  transition: all 0.50s ease;
+  border: 1px solid #006D82;
+  padding: 8px 15px;
+  border-radius: 10px;
+}
+
+.main a:hover {
+  color: #009C4E;
+  border-color: #009C4E; 
+}
+
+.user a {
+  color: #006D82;
+  font-size: 14px;
+  font-weight: 500;
+  border: 1px solid #006D82;
+  padding: 8px 15px;
+  border-radius: 10px;
+  transition: all 0.50s ease;
+}
+
+.user a:hover {
+  color: #009C4E;
+  border-color: #009C4E;
 }
 
 /* Main Page */
 
-.main-page {
-  text-align: center;
-  margin: 0 !important;
-  padding: 0 !important;
-  box-sizing: content-box !important;
+.home {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-image: url('../assets/Oceanss.jpg'); 
+  background-size: cover;
+  background-position: center;
+  color: white; 
 }
 
-.background-image {
-  width: 100%;
-  filter: brightness(0.6);
+.home-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.content {
-  position: absolute;
-  top: 55%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-}
-
-.title {
-  font-size: 40px;
+.home-text h1 {
+  font-size: 50px;
+  font-weight: 700;
   margin-bottom: 10px;
-  color: #02C7DA;
-}
-
-.title span {
-  color: #02C7DA;
-}
-
-.description {
-  font-size: 16px;
-  margin-bottom: 30px;
-  max-width: 670px;
-}
-
-.moreBtn {
-  display: inline-block;
-  background-color: #00839C;
-  border-radius: 8px;
-  transition: background-color 0.4s ease-in-out;
-  padding: 10px 50px;
-}
-
-.moreBtn:hover {
-  background-color: #1C7947;
-}
-
-.btnB {
-  text-decoration: none;
-  color: white;
+  color: #006D82;
   text-align: center;
+}
+
+.home-text p {
+  width: 100%;
+  max-width: 1000px;
   font-size: 16px;
+  font-weight: bold;
+  line-height: 1.7;
+  color: #006D82;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.btn {
+  padding: 10px 20px;
+  background-color: #006D82;
+  color: white;
+  border-radius: 10px;
+  transition: all 0.5s ease;
+  font-family: "PoppinsSB";
+  font-size: 16px;
+}
+
+.btn:hover {
+  background-color: #009C4E;
 }
 
 /* Bit About */
@@ -140,9 +181,9 @@
   position: relative;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 50px;
+  gap: 150px;
   align-items: center; 
-  margin: 0px 100px 100px;
+  margin: 110px 100px;
 }
 
 .bit-about-content {
@@ -152,30 +193,29 @@
 }
 
 .bit-about-content h4 {
-  font-size: 49px;
-  margin-bottom: 10px;
+  font-size: 40px;
+  margin-bottom: 15px;
   color: #00839C;
 }
 
 .bit-about-content p {
-  font-family: 'Poppins-Regular.ttf';
+  font-family: 'PoppinsSB';
   font-size: 18px;
-  margin-bottom: 25px;
+  margin-bottom: 35px;
 }
 
-.bit-about-content .moreBtn {
-  display: inline-block;
-  background-color: #00839C;
-  border-radius: 8px;
-  transition: background-color 0.4s ease-in-out;
+.btn1 {
   padding: 10px 20px;
-  text-decoration: none;
+  background-color: #006D82;
   color: white;
+  border-radius: 10px;
+  transition: all 0.5s ease;
   font-size: 16px;
+  font-family: "PoppinsSB";
 }
 
-.bit-about-content .moreBtn:hover {
-  background-color: #1C7947;
+.btn1:hover {
+  background-color: #009C4E;
 }
 
 .bit-about-image {
@@ -183,8 +223,7 @@
 }
 
 .bit-about-image img {
-  max-width: 100%;
-  border-radius: 5px;
+  max-width: 90%;
 }
 
 /* Program */
@@ -195,16 +234,15 @@
 }
 
 .program-section {
-  margin-top: 20px;
-  background-color: #00839C;
-  padding: 10px;
+  background-color: #A3C6FF;
+  padding: 50px 0px;
 }
 
 .grid-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  margin: 50px;
-  font-size: 16px;
+  margin: 40px 50px;
+  font-size: 14px;
   font-family: 'Poppins-Regular.ttf';
   grid-gap: 30px;
 }
@@ -216,7 +254,7 @@
   text-align: center;
   padding: 24px;
   border-radius: 24px;
-  background-color: #1C7947;
+  background-color: #009C4E;
   color: white;
 }
 
@@ -232,51 +270,127 @@
 /* Quotes */
 
 .quotes-section .author {
-  font-size: 16px;
-  color: #02C7DA;
-}
-
-.quotes-section .about {
   font-size: 18px;
+  color: #A3C6FF;
+  margin-bottom: 25px;
+  font-family: "PoppinsSB";
+}
+
+.btn2 {
+  padding: 10px 40px;
+  background-color: #006D82;
   color: white;
-  padding: 0px 200px;
-}
-
-.donateBtn2 {
-  display: inline-block;
-  background-color: #00839C;
-  border-radius: 8px;
-  transition: background-color 0.4s ease-in-out;
-  padding: 10px 50px;
-}
-
-.donateBtn2:hover {
-  background-color: #02C7DA;
-}
-
-.quotes-section .quote-box .btnC {
-  text-decoration: none;
-  color: white;
-  text-align: center;
+  border-radius: 10px;
+  transition: all 0.5s ease;
+  font-family: "PoppinsSB";
   font-size: 16px;
+}
+
+.btn2:hover {
+  background-color: #A3C6FF;
 }
 
 .quotes-section blockquote {
-  font-size: 28px;
+  font-family: "PoppinsSB";
+  font-size: 30px;
   margin-bottom: 10px;
   color: white;
   padding: 0px 10px;
 }
 
 .quotes-section .quote-box {
-  padding: 30px 30px;
+  padding: 60px 40px;
   text-align: center;
   width: 1100px;
   border-radius: 10px;
   margin: auto;
   margin-top: 100px;
   margin-bottom: 100px;
-  background: #1C7947;
+  background: #009C4E;
+}
+
+/* Article / News  */
+
+#news h1 {
+  text-align: center;
+  font-size: 40px;
+  color:  white;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.news-section {
+  padding-bottom: 80px;
+  background-color: #A3C6FF;
+}
+
+.grid-container-4 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  grid-gap: 100px;
+  padding: 0px 100px;
+}
+
+.box-1 {
+  text-align: left;
+  border-radius: 10px;
+  background: #009C4E;
+  overflow: hidden; 
+}
+
+.box-1 img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.box-1 a {
+  display: block;
+  padding: 12px 15px;
+  font-size: 16px;
+  color: white;
+  text-decoration: none;
+  font-family: "PoppinsSB";
+}
+
+.box-1 a:hover {
+  text-decoration: underline;
+}
+
+/* Donate */
+
+.box-gabung {
+  padding: 50px;
+  text-align: center;
+  width: 1105px;
+  border-radius: 10px;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  background: #009C4E;
+}
+
+.btn3 {
+  padding: 10px 40px;
+  background-color: #006D82;
+  color: white;
+  border-radius: 10px;
+  transition: all 0.5s ease;
+  font-family: "PoppinsSB";
+  font-size: 16px;
+}
+
+.btn3:hover {
+  background-color: #A3C6FF;
+}
+
+#gabung p {
+  font-family: "PoppinsSB";
+  font-size: 30px;
+  margin-bottom: 10px;
+  color: white;
+  padding: 0px 10px 30px 0px;
 }
 
 /* Footer */
@@ -285,7 +399,7 @@
   padding: 50px;
   display: flex;
   justify-content: center;
-  background-color: #00839C;
+  background-color: #A3C6FF;
 }
 
 .row {
@@ -315,7 +429,16 @@ ul li a {
   color: #fff;
 }
 
+ul li p {
+  text-decoration: none;
+  color: #fff;
+}
+
 ul li a:hover {
+  color: #ddd;
+}
+
+ul li p:hover {
   color: #ddd;
 }
 
@@ -323,4 +446,6 @@ ul li a:hover {
   text-align: center;
   font-size: 10px;
   color: #00839C;
+  margin: 10px;
+  font-family: "PoppinsSB";
 }
