--- a/frontend/src/styles/Events.css
+++ b/frontend/src/styles/Events.css
@@ -1,108 +1,108 @@
 header {
-    position: fixed;
-    width: 100%;
-    top: 0;
-    right: 0;
-    z-index: 1000;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: white;
-    height: 80px; 
-    padding: 0px 12%;
-    transition: all 0.50s ease;
-  }
-  
-  .logo {
-    display: flex;
-    align-items: center;
-  }
-  
-  .logo img {
-    height: 50px;
-  }
-  
-  .navbar {
-    display: flex;
-  }
-  
-  .navbar a {
-    position: relative;
-    color: #006D82;
-    font-size: 14px;
-    font-weight: 500;
-    padding: 5px 0;
-    margin: 0px 30px;
-    transition: color 0.50s ease;
-  }
-  
-  .navbar a::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: transparent;
-    transform: scaleX(0);
-    transform-origin: bottom center;
-    transition: transform 0.4s ease-in-out, background-color 0.4s ease-in-out;
-  }
-  
-  .navbar a:hover::after {
-    background-color: #009C4E;
-    transform: scaleX(1);
-  }
-  
-  .navbar a:hover {
-    color: #009C4E;
-  }
-  
-  .navbar a.active {
-    color: #009C4E;
-  }
-  
-  .main {
-    display: flex;
-    align-items: center;
-  }
-  
-  .user {
-    display: flex;
-    align-items: center;
-  }
-  
-  .main a {
-    margin-right: 5px;
-    margin-left: 0px;
-    color: #006D82;
-    font-size: 14px;
-    font-weight: 500;
-    transition: all 0.50s ease;
-    border: 1px solid #006D82;
-    padding: 8px 15px;
-    border-radius: 10px;
-  }
-  
-  .main a:hover {
-    color: #009C4E;
-    border-color: #009C4E; 
-  }
-  
-  .user a {
-    color: #006D82;
-    font-size: 14px;
-    font-weight: 500;
-    border: 1px solid #006D82;
-    padding: 8px 15px;
-    border-radius: 10px;
-    transition: all 0.50s ease;
-  }
-  
-  .user a:hover {
-    color: #009C4E;
-    border-color: #009C4E;
-  }
+  position: fixed;
+  width: 100%;
+  top: 0;
+  right: 0;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: white;
+  height: 80px;
+  padding: 0px 12%;
+  transition: all 0.50s ease;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo img {
+  height: 50px;
+}
+
+.navbar {
+  display: flex;
+}
+
+.navbar a {
+  position: relative;
+  color: #006D82;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 5px 0;
+  margin: 0px 30px;
+  transition: color 0.50s ease;
+}
+
+.navbar a::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: transparent;
+  transform: scaleX(0);
+  transform-origin: bottom center;
+  transition: transform 0.4s ease-in-out, background-color 0.4s ease-in-out;
+}
+
+.navbar a:hover::after {
+  background-color: #009C4E;
+  transform: scaleX(1);
+}
+
+.navbar a:hover {
+  color: #009C4E;
+}
+
+.navbar a.active {
+  color: #009C4E;
+}
+
+.main {
+  display: flex;
+  align-items: center;
+}
+
+.user {
+  display: flex;
+  align-items: center;
+}
+
+.main a {
+  margin-right: 5px;
+  margin-left: 0px;
+  color: #006D82;
+  font-size: 14px;
+  font-weight: 500;
+  transition: all 0.50s ease;
+  border: 1px solid #006D82;
+  padding: 8px 15px;
+  border-radius: 10px;
+}
+
+.main a:hover {
+  color: #009C4E;
+  border-color: #009C4E;
+}
+
+.user a {
+  color: #006D82;
+  font-size: 14px;
+  font-weight: 500;
+  border: 1px solid #006D82;
+  padding: 8px 15px;
+  border-radius: 10px;
+  transition: all 0.50s ease;
+}
+
+.user a:hover {
+  color: #009C4E;
+  border-color: #009C4E;
+}
 
 /* Events Page */
 
@@ -112,10 +112,10 @@ header {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-image: url('../assets/Oceanss.jpg'); 
+  background-image: url('../assets/Oceanss.jpg');
   background-size: cover;
   background-position: center;
-  color: white; 
+  color: white;
 }
 
 .events-section {
@@ -172,56 +172,97 @@ header {
 /* Footer */
 
 #footer {
-    padding: 50px;
-    display: flex;
-    justify-content: center;
-    background-color: #A3C6FF;
-  }
-  
-  .row {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .footer-col {
-    margin: 0px;
-    padding: 0px 80px;
-    text-align: left;
-  }
-  
-  .footer-col h4 {
-    margin-bottom: 10px;
-    color: white;
-    font-size: 18px;
-  }
-  
-  ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  ul li a {
-    text-decoration: none;
-    color: #fff;
-  }
-  
-  ul li p {
-    text-decoration: none;
-    color: #fff;
-  }
-  
-  ul li a:hover {
-    color: #ddd;
-  }
-  
-  ul li p:hover {
-    color: #ddd;
-  }
-  
-  .copyright {
-    text-align: center;
-    font-size: 10px;
-    color: #00839C;
-    margin: 10px;
-    font-family: "PoppinsSB";
-  }
+  padding: 50px;
+  display: flex;
+  justify-content: center;
+  background-color: #A3C6FF;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer-col {
+  margin: 0px;
+  padding: 0px 80px;
+  text-align: left;
+}
+
+.footer-col h4 {
+  margin-bottom: 10px;
+  color: white;
+  font-size: 18px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+ul li a {
+  text-decoration: none;
+  color: #fff;
+}
+
+ul li p {
+  text-decoration: none;
+  color: #fff;
+}
+
+ul li a:hover {
+  color: #ddd;
+}
+
+ul li p:hover {
+  color: #ddd;
+}
+
+.copyright {
+  text-align: center;
+  font-size: 10px;
+  color: #00839C;
+  margin: 10px;
+  font-family: "PoppinsSB";
+}
+
+.grid-container-4 {
+  display: grid;
+  grid-template-columns: repeat(2, 2fr);
+  justify-content: center;
+  grid-gap: 100px;
+  padding: 0px 100px;
+}
+
+.box-1 {
+  padding: 10px;
+  text-align: left;
+  border-radius: 10px;
+  background: #009C4E;
+  overflow: hidden;
+}
+
+.box-1 img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.box-1 a {
+  display: block;
+  padding: 12px 15px;
+  font-size: 16px;
+  color: white;
+  text-decoration: none;
+  font-family: "PoppinsSB";
+}
+
+.box-1 a:hover {
+  text-decoration: underline;
+}
+
+.desc-text {
+  margin-top: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
